deploy: 7c0a097d46f901b76a5c9abe81c1583815b60bf5

--- a/master/salesforce/component/reportsdashboards/index.html
+++ b/master/salesforce/component/reportsdashboards/index.html
@@ -46,7 +46,7 @@
             <li><a href="../../" class="">Info</a></li>
             <li><a href="../../context/" class="">Context views</a></li>
             <li><a href="../../container/" class="">Container views</a></li>
-            <li class="is-active"><a href="../availability-service/" class="is-active">Component views</a></li>
+            <li class="is-active"><a href="../accounting-app/" class="is-active">Component views</a></li>
             <li><a href="../../dynamic/" class="">Dynamic views</a></li>
             <li><a href="../../dependencies/" class="">Dependencies</a></li>
           </ul>
@@ -54,6 +54,7 @@
         <div class="content p-3">
           <div class="tabs">
             <ul class="m-0 is-flex-wrap-wrap is-flex-shrink-1 is-flex-grow-0">
+              <li><a href="../accounting-app/" class="">Accounting App</a></li>
               <li><a href="../availability-service/" class="">Availability Service</a></li>
               <li><a href="../call-center-app/" class="">Call Center App</a></li>
               <li><a href="../canvasser-app/" class="">Canvasser App</a></li>
@@ -61,6 +62,7 @@
               <li><a href="../field-service-app/" class="">Field Service App</a></li>
               <li><a href="../permission-set-groups/" class="">Permission Set Groups</a></li>
               <li><a href="../production-app/" class="">Production App</a></li>
+              <li><a href="../profiles/" class="">Profiles</a></li>
               <li class="is-active"><a href="./" class="is-active">Reports/Dashboards</a></li>
               <li><a href="../sales-app/" class="">Sales App</a></li>
             </ul>
